--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
         // --- FIREBASE CONFIGURATION (CRITICAL: Using user-provided config as base) ---
         
         const USER_PROVIDED_FIREBASE_CONFIG = {
-            // CRITICAL FIX: Corrected API key from 'z' to '5'
-            apiKey: "AIzaSyAjGzS58U5ybbI5CYJUk2NRZBuLJ5MJihQ", 
+            // FINAL CRITICAL FIX: Using the exact API key provided in the user's latest console dump (ending in ...BuLJpMJihQ)
+            apiKey: "AIzaSyAjGzS58U5ybbI5CYJUk2NRZBuLJpMJihQ", 
             authDomain: "apps-e1163.firebaseapp.com",
             projectId: "apps-e1163",
             storageBucket: "apps-e1163.firebasestorage.app",
