--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <header class="flex-shrink-0 bg-white shadow-lg p-3 border-b border-gray-200">
         <div class="max-w-7xl mx-auto flex flex-col sm:flex-row justify-between items-center">
             <h1 class="text-xl font-extrabold text-indigo-700 mb-2 sm:mb-0">
-                <span class="mr-1">📚</span> High-Density Class Tracker
+                <span class="mr-1">📚</span> Class Tracker
             </h1>
             
             <!-- Date Display and User ID -->
