--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
             
             <!-- Date Display and User ID -->
             <div class="flex flex-col sm:flex-row items-center space-y-2 sm:space-y-0 sm:space-x-3">
+
+        <a href="abc.html" class="flex-shrink-0 inline-block px-5 py-2 text-sm text-center bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 transition duration-200 ease-in-out font-semibold shadow-md min-w-[120px]">
+            About Us
+        </a>
+
+        <a href="contact.html" class="flex-shrink-0 inline-block px-5 py-2 text-sm text-center bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200 transition duration-200 ease-in-out font-semibold shadow-md min-w-[120px]">
+            Contact
+        </a>
+
                 <!-- Date Input Field -->
                 <input type="date" id="date-selector" onchange="handleDateChange(this.value)"
                        class="px-2 py-1 border border-indigo-300 rounded-lg text-sm font-semibold text-gray-700 focus:ring-indigo-500 focus:border-indigo-500 shadow-sm transition duration-150">
