--- a/index.html
+++ b/index.html
@@ -907,6 +907,8 @@ You'll need a tiny bit of JavaScript to make the hamburger menu toggle. Add this
                 showMessage('Error', 'Failed to copy User ID to clipboard.');
             }
         });
+        </script>
+    <script>
         // --- MOBILE MENU LOGIC ---
         document.getElementById('menu-toggle').addEventListener('click', () => {
             const menu = document.getElementById('mobile-nav-menu');
