Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -878,8 +878,8 @@
                                         <span class="font-extrabold text-sm text-gray-900 leading-tight">${c.name}</span>
                                         ${trophyHtml}
                                     </div>
-                                    <span class="text-2xs font-semibold px-1 py-0.5 rounded-full ${c.performance.bg} ${c.performance.text_color} whitespace-nowrap">
-                                        ${c.performance.text}
+                                    <span class="w-2.5 h-2.5 rounded-full ${c.performance.bg} block" title="Cumulative Status: ${c.performance.text}"></span>
+
                                     </span>
                                 </div>
                                 
@@ -1293,4 +1293,5 @@ document.getElementById('user-id-display-mobile').addEventListener('click', () =
 </html>
     </script>
 </body>
+
 </html>
