Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </h1>
 
         <nav class="hidden sm:hidden items-center space-x-3 mx-4">
-    <a href="abc.html" class="inline-block ...">About Us</a>
+    <a href="qaida-tracker.html" class="inline-block ...">About Us</a>
     <a href="contact.html" class="inline-block ...">Contact</a>
 </nav>
         
@@ -73,7 +73,7 @@
     
 <div id="mobile-nav-menu" class="hidden bg-white border-t border-gray-200 py-2 absolute w-full left-0 top-full shadow-xl z-10">
         <div class="flex flex-col space-y-2 px-4">
-            <a href="abc.html" class="px-3 py-2 text-sm text-center bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 font-semibold shadow-md">
+            <a href="qaida-tracker.html" class="px-3 py-2 text-sm text-center bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 font-semibold shadow-md">
                 About Us
             </a>
             <a href="contact.html" class="px-3 py-2 text-sm text-center bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200 font-semibold shadow-md">
@@ -1292,4 +1292,5 @@ document.getElementById('user-id-display-mobile').addEventListener('click', () =
 </html>
     </script>
 </body>
+
 </html>
