Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </h1>
 
         <nav class="hidden sm:hidden items-center space-x-3 mx-4">
-    <a href="qaida-tracker.html" class="inline-block ...">About Us</a>
+    <a href="qaida-tracker.html" class="inline-block ...">Qaida Tracker</a>
     <a href="contact.html" class="inline-block ...">Contact</a>
 </nav>
         
@@ -1294,3 +1294,4 @@ document.getElementById('user-id-display-mobile').addEventListener('click', () =
 </body>
 
 </html>
+
