--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <div id="mobile-nav-menu" class="hidden bg-white border-t border-gray-200 py-2 absolute w-full left-0 top-full shadow-xl z-10">
         <div class="flex flex-col space-y-2 px-4">
             <a href="qaida-tracker.html" class="px-3 py-2 text-sm text-center bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 font-semibold shadow-md">
-                About Us
+                Qaida Tracker
             </a>
             <a href="contact.html" class="px-3 py-2 text-sm text-center bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200 font-semibold shadow-md">
                 Contact
@@ -1294,4 +1294,5 @@ document.getElementById('user-id-display-mobile').addEventListener('click', () =
 </body>
 
 </html>
+
 
