--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
         <nav class="hidden sm:hidden items-center space-x-3 mx-4">
     <a href="qaida-tracker.html" class="inline-block ...">Qaida Tracker</a>
     <a href="contact.html" class="inline-block ...">Contact</a>
+    <a href="dashboard.html" class="inline-block ...">Dashboard</a>
 </nav>
         
         <div class="flex items-center space-x-2 flex-shrink-0">
@@ -76,8 +77,8 @@
             <a href="qaida-tracker.html" class="px-3 py-2 text-sm text-center bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 font-semibold shadow-md">
                 Qaida Tracker
             </a>
-            <a href="contact.html" class="px-3 py-2 text-sm text-center bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200 font-semibold shadow-md">
-                Contact
+            <a href="dashboard.html" class="px-3 py-2 text-sm text-center bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200 font-semibold shadow-md">
+                Dashboard
             </a>
             <div id="user-id-display-mobile" class="text-xs text-gray-500 bg-gray-50 px-3 py-1 rounded-lg text-center mt-2 cursor-pointer border border-gray-200" 
      title="User ID. Click to Copy">
@@ -1312,5 +1313,6 @@ document.getElementById('user-id-display-mobile').addEventListener('click', () =
 </body>
 
 </html>
+
 
 
