--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         </h1>
 
         <nav class="hidden sm:hidden items-center space-x-3 mx-4">
-    <a href="qaida-tracker.html" class="inline-block ...">Qaida Tracker</a>
+    <a href="quran-tracker.html" class="inline-block ...">Quran Tracker</a>
     <a href="contact.html" class="inline-block ...">Contact</a>
     <a href="dashboard.html" class="inline-block ...">Dashboard</a>
 </nav>
@@ -74,8 +74,8 @@
     
 <div id="mobile-nav-menu" class="hidden bg-white border-t border-gray-200 py-2 absolute w-full left-0 top-full shadow-xl z-10">
         <div class="flex flex-col space-y-2 px-4">
-            <a href="qaida-tracker.html" class="px-3 py-2 text-sm text-center bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 font-semibold shadow-md">
-                Qaida Tracker
+            <a href="quran-tracker.html" class="px-3 py-2 text-sm text-center bg-indigo-600 text-white rounded-lg hover:bg-indigo-700 font-semibold shadow-md">
+                Quran Tracker
             </a>
             <a href="dashboard.html" class="px-3 py-2 text-sm text-center bg-gray-100 text-gray-700 rounded-lg hover:bg-gray-200 font-semibold shadow-md">
                 Dashboard
@@ -1313,5 +1313,6 @@ document.getElementById('user-id-display-mobile').addEventListener('click', () =
 </body>
 
 </html>
+
 
 
