--- a/quran-tracker.html
+++ b/quran-tracker.html
@@ -117,7 +117,7 @@
         </div>
 
         <!-- Student Detail and Logging View -->
-        <div id="student-detail-view" class="hidden">
+        <div id="student-detail-view" class="flex flex-col flex-grow overflow-y-auto custom-scroll hidden">
             <button onclick="app.showStudentListView()" class="mb-4 text-blue-600 hover:text-blue-800 font-medium flex items-center">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-1" viewBox="0 0 20 20" fill="currentColor">
                     <path fill-rule="evenodd" d="M12.707 5.293a1 1 0 010 1.414L9.414 10l3.293 3.293a1 1 0 01-1.414 1.414l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 0z" clip-rule="evenodd" />
