--- a/index.html
+++ b/index.html
@@ -1043,12 +1043,12 @@ const renderClassList = () => {
                         
                         <div class="grid grid-cols-2 gap-4">
                              <div>
-                                <label for="presentToday" class="block text-xs font-medium text-gray-700 mb-1">Present Today</label>
+                                <label for="presentToday" class="block text-xs font-medium text-gray-700 mb-1">Present - On Time (P)</label>
                                 <input type="number" id="presentToday" value="${presentToday}" oninput="updateReportEntry('${classId}', 'presentToday', this.value)"
                                     class="w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 font-mono text-lg ${disabledAttr ? 'bg-gray-100' : ''}" placeholder="0" min="0" ${disabledAttr}>
                             </div>
                              <div>
-                                <label for="tardyToday" class="block text-xs font-medium text-gray-700 mb-1">Tardy Today</label>
+                                <label for="tardyToday" class="block text-xs font-medium text-gray-700 mb-1">Present - Tardy (T)</label>
                                 <input type="number" id="tardyToday" value="${tardyToday}" oninput="updateReportEntry('${classId}', 'tardyToday', this.value)"
                                     class="w-full px-3 py-2 border border-gray-300 rounded-lg shadow-sm focus:ring-indigo-500 focus:border-indigo-500 font-mono text-lg ${disabledAttr ? 'bg-gray-100' : ''}" placeholder="0" min="0" ${disabledAttr}>
                             </div>
